--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
             <ul id="recipeList">
                 <li>
                     <img src="https://www.vegrecipesofindia.com/wp-content/uploads/2020/01/paneer-butter-masala-5.jpg" alt="Paneer Butter Masala">
-                    <a href="paneer_butter_masala.html">Paneer Butter Masala</a>
+                    <a href="{{ url_for('paneer_butter_masala.html') }}">Paneer Butter Masala</a>
                 </li>
                 <li>
                     <img src="https://myfoodstory.com/wp-content/uploads/2020/09/Veg-Biryani-4.jpg" alt="Veg Dum Biryani">
