--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
             <h1>Indian Shakahari Rasoi</h1>
         </div>
         <nav>
-            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('home') }}">Home</a>
         </nav>
     </header>
     <main>
