--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <img src="https://myfoodstory.com/wp-content/uploads/2020/09/Veg-Biryani-4.jpg" alt="Veg Dum Biryani">
-                    <a href="{{ url_for('veg_dum_biryani')}}">Veg Dum Biryani</a>
+                    <a href="veg_dum_biryani.html">Veg Dum Biryani</a>
                 </li>
                 <li>
                     <img src="https://www.eitanbernath.com/wp-content/uploads/2020/05/Butter-Paneer-1-4x5-LOW-RES-819x1024.jpeg" alt="Jalebi">
