--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
             </nav>
             <ul id="recipeList">
                 <li>
-                    <img src="https://www.vegrecipesofindia.com/wp-content/uploads/2020/01/paneer-butter-masala-5.jpg" alt="Paneer Butter Masala">
+                    <img src="https://www.eitanbernath.com/wp-content/uploads/2020/05/Butter-Paneer-1-4x5-LOW-RES-819x1024.jpeg" alt="Paneer Butter Masala">
                     <a href="{{ url_for('paneer_butter_masala') }}">Paneer Butter Masala</a>
                 </li>
                 <li>
@@ -152,7 +152,7 @@
                     <a href="veg_dum_biryani.html">Veg Dum Biryani</a>
                 </li>
                 <li>
-                    <img src="https://www.eitanbernath.com/wp-content/uploads/2020/05/Butter-Paneer-1-4x5-LOW-RES-819x1024.jpeg" alt="Jalebi">
+                    <img src="https://www.vegrecipesofindia.com/wp-content/uploads/2020/01/paneer-butter-masala-5.jpg" alt="Jalebi">
                     <a href="{{ url_for('jalebi')}}">Jalebi</a>
                 </li>
             </ul>
