--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         font-family: Arial, sans-serif;
         margin: 1em; /* Add a margin of 1 spacing unit */
         padding: 0;
-        background-color: white; /* White background color */
+        background-color: green; /* White background color */
     }
 
     header {
